--- a/Graphic Interface.ipynb
+++ b/Graphic Interface.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,17 +20,19 @@
     "\n",
     "## INTERFACE SETUP ##\n",
     "root = tkinter.Tk()\n",
-    "root.title('Oxide Useer Interface') \n",
-    "root.wm_title('Oxide Useer Interface')\n",
+    "root.title('Oxide User Interface') \n",
+    "root.wm_title('Oxide User Interface')\n",
     "\n",
     "\n",
     "def getPeak():\n",
     "    max_Idif, max_T, max_index = -1, -1, -1\n",
-    "    bubble_threshold = 8\n",
+    "    #variance_threshold_min = 10\n",
+    "    bubble_threshold_max = 25\n",
     "    for index, row in df.iterrows():\n",
-    "        if row['T'] > bubble_threshold:\n",
+    "        if row['T'] > bubble_threshold_max:\n",
     "            break\n",
     "        if row['Idif'] > max_Idif:\n",
+    "            # row['T'] > variance_threshold_min and\n",
     "            max_Idif, max_T, max_index = row['Idif'], row['T'], index\n",
     "            \n",
     "    return [max_Idif, max_T, max_index]\n",
@@ -70,7 +72,7 @@
     "    input_val = inputtxt.get(\"1.0\",'end-1c')\n",
     "    #input_val = 'ModifiedSWV.xlsx'\n",
     "    \n",
-    "    df = pd.read_excel(input_val, sheet_name='Sheet1')  \n",
+    "    df = pd.read_excel(input_val, sheet_name='new3')  \n",
     "    df = df.drop([0])\n",
     "\n",
     "    #plot data\n",
@@ -96,7 +98,7 @@
     "\n",
     "## READ DATA ##\n",
     "\n",
-    "df = pd.read_excel('ModifiedSWV.xlsx', sheet_name='Sheet1')  \n",
+    "df = pd.read_excel('ModifiedSWV_2.xlsx', sheet_name='new3')  \n",
     "df = df.drop([0])\n",
     "\n",
     "## PLOT DATA AND ADD TO INTERFACE ##\n",
