--- a/Graphic Interface.ipynb
+++ b/Graphic Interface.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "def getPeak():\n",
     "    max_Idif, max_T, max_index = -1, -1, -1\n",
     "    #variance_threshold_min = 10\n",
-    "    bubble_threshold_max = 25\n",
+    "    bubble_threshold_max = 8\n",
     "    for index, row in df.iterrows():\n",
     "        if row['T'] > bubble_threshold_max:\n",
     "            break\n",
@@ -45,8 +45,8 @@
     "\n",
     "def _graph():\n",
     "    plot = ax.plot(df_x, df_y)\n",
-    "    ax.set_ylabel('O2- concentration')\n",
-    "    ax.set_xlabel('Idif')\n",
+    "    ax.set_ylabel('O2- concentration (mol/kg)')\n",
+    "    ax.set_xlabel('Current (A.cm-2)')\n",
     "    ax.ticklabel_format(style='sci', scilimits=(0,0))\n",
     "    #acquire peak\n",
     "    peak_data = getPeak()\n",
@@ -56,15 +56,20 @@
     "    # peak_data[1]*0.001\n",
     "    oxide_conc = calc_m*peak_data[0]+calc_b\n",
     "    ax.scatter(peak_data[0], oxide_conc, c='red', marker='o')\n",
+    "    \n",
     "    plot1 = df.plot(x='T', y='Idif', ax = ax1)\n",
-    "    plot1.set_ylabel('i')\n",
+    "    plot1.set_ylabel('Idif (A.cm-2)')\n",
     "    plot1.set_xlabel('V vs Pt')\n",
+    "    ax1.ticklabel_format(style='sci', scilimits=(0,0))\n",
+    "    ax1.scatter(peak_data[1], peak_data[0], c='red', marker='o')\n",
+    "    ax1.get_legend().remove()\n",
+    "    \n",
     "    canvas.draw()\n",
     "    canvas1.draw()\n",
     "    \n",
     "    #display values\n",
     "    dispvals = 'Peak Potential: {} (V vs Pt), \\n Peak Current: {} (A.cm-2), \\n Oxide Concentration: {} (mol/kg)'\n",
-    "    allstr = dispvals.format(peak_data[2]*0.01, round(peak_data[0],5), round(oxide_conc*1000, 2))\n",
+    "    allstr = dispvals.format(round(peak_data[2]*0.001,3), round(peak_data[0],5), round(oxide_conc*1000, 2))\n",
     "    label = tkinter.Label(root, text= allstr)\n",
     "    label.grid(row = 2, column = 0)\n",
     "    \n",
@@ -72,7 +77,7 @@
     "    input_val = inputtxt.get(\"1.0\",'end-1c')\n",
     "    #input_val = 'ModifiedSWV.xlsx'\n",
     "    \n",
-    "    df = pd.read_excel(input_val, sheet_name='new3')  \n",
+    "    df = pd.read_excel(input_val, sheet_name='Sheet1')  \n",
     "    df = df.drop([0])\n",
     "\n",
     "    #plot data\n",
@@ -98,7 +103,7 @@
     "\n",
     "## READ DATA ##\n",
     "\n",
-    "df = pd.read_excel('ModifiedSWV_2.xlsx', sheet_name='new3')  \n",
+    "df = pd.read_excel('ModifiedSWV.xlsx', sheet_name='Sheet1')  \n",
     "df = df.drop([0])\n",
     "\n",
     "## PLOT DATA AND ADD TO INTERFACE ##\n",
@@ -124,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
