fixed x axis issue

--- a/Graphic Interface.ipynb
+++ b/Graphic Interface.ipynb
@@ -2,11 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tkinter\n",
+    "from tkinter import ttk\n",
+    "from tkinter import filedialog as fd\n",
+    "from tkinter.messagebox import showinfo\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -27,13 +31,13 @@
     "def getPeak():\n",
     "    max_Idif, max_T, max_index = -1, -1, -1\n",
     "    #variance_threshold_min = 10\n",
-    "    bubble_threshold_max = 8\n",
+    "    bubble_threshold_max = 1.5\n",
     "    for index, row in df.iterrows():\n",
-    "        if row['T'] > bubble_threshold_max:\n",
+    "        if row['Vstep'] > bubble_threshold_max:\n",
     "            break\n",
     "        if row['Idif'] > max_Idif:\n",
     "            # row['T'] > variance_threshold_min and\n",
-    "            max_Idif, max_T, max_index = row['Idif'], row['T'], index\n",
+    "            max_Idif, max_T, max_index = row['Idif'], row['Vstep'], index\n",
     "            \n",
     "    return [max_Idif, max_T, max_index]\n",
     "\n",
@@ -57,7 +61,7 @@
     "    oxide_conc = calc_m*peak_data[0]+calc_b\n",
     "    ax.scatter(peak_data[0], oxide_conc, c='red', marker='o')\n",
     "    \n",
-    "    plot1 = df.plot(x='T', y='Idif', ax = ax1)\n",
+    "    plot1 = df.plot(x='Vstep', y='Idif', ax = ax1)\n",
     "    plot1.set_ylabel('Idif (A.cm-2)')\n",
     "    plot1.set_xlabel('V vs Pt')\n",
     "    ax1.ticklabel_format(style='sci', scilimits=(0,0))\n",
@@ -69,7 +73,7 @@
     "    \n",
     "    #display values\n",
     "    dispvals = 'Peak Potential: {} (V vs Pt), \\n Peak Current: {} (A.cm-2), \\n Oxide Concentration: {} (mol/kg)'\n",
-    "    allstr = dispvals.format(round(peak_data[2]*0.001,3), round(peak_data[0],5), round(oxide_conc*1000, 2))\n",
+    "    allstr = dispvals.format(round(peak_data[2],3), round(peak_data[0],5), round(oxide_conc, 2))\n",
     "    label = tkinter.Label(root, text= allstr)\n",
     "    label.grid(row = 2, column = 0)\n",
     "    \n",
