calibration curve scaling! still needs to be cleaned up

--- a/Graphic Interface.ipynb
+++ b/Graphic Interface.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,21 @@
     "root.title('Oxide User Interface') \n",
     "root.wm_title('Oxide User Interface')\n",
     "\n",
+    "from tkinter import filedialog\n",
+    "  \n",
+    "# Function for opening the\n",
+    "# file explorer window\n",
+    "def browseFiles():\n",
+    "    filename = filedialog.askopenfilename(initialdir = \"/\",\n",
+    "                                          title = \"Select a File\",\n",
+    "                                          filetypes = ((\"Text files\",\n",
+    "                                                        \"*.txt*\"),\n",
+    "                                                       (\"all files\",\n",
+    "                                                        \"*.*\")))\n",
+    "      \n",
+    "    # Change label contents\n",
+    "    inputtxt.configure(text=filename)\n",
+    "\n",
     "\n",
     "def getPeak():\n",
     "    max_Idif, max_T, max_index = -1, -1, -1\n",
@@ -42,12 +57,15 @@
     "    return [max_Idif, max_T, max_index]\n",
     "\n",
     "## LAYOUT ##\n",
-    "\n",
-    "inputtxt = tkinter.Text(root, height = 2, width = 50) \n",
+    "inputtxt = tkinter.Label(root, text = \"File Explorer using Tkinter\", width = 50, height = 2,) \n",
+    "#tkinter.Text(root, height = 2, width = 50) \n",
     "inputtxt.grid(row = 0, column = 0)\n",
     "\n",
     "\n",
     "def _graph():\n",
+    "    A_val = float(textBox.get(1.0, \"end-1c\"))\n",
+    "    df['Idif'] *= A_val\n",
+    "    \n",
     "    plot = ax.plot(df_x, df_y)\n",
     "    ax.set_ylabel('O2- concentration (mol/kg)')\n",
     "    ax.set_xlabel('Current (A.cm-2)')\n",
@@ -73,22 +91,32 @@
     "    \n",
     "    #display values\n",
     "    dispvals = 'Peak Potential: {} (V vs Pt), \\n Peak Current: {} (A.cm-2), \\n Oxide Concentration: {} (mol/kg)'\n",
-    "    allstr = dispvals.format(round(peak_data[2],3), round(peak_data[0],5), round(oxide_conc, 2))\n",
+    "    allstr = dispvals.format(round(peak_data[1],3), round(peak_data[0],5), round(oxide_conc, 2))\n",
     "    label = tkinter.Label(root, text= allstr)\n",
     "    label.grid(row = 2, column = 0)\n",
     "    \n",
     "def _parse():\n",
-    "    input_val = inputtxt.get(\"1.0\",'end-1c')\n",
-    "    #input_val = 'ModifiedSWV.xlsx'\n",
+    "    input_val = 'ModifiedSWV.xlsx'\n",
     "    \n",
-    "    df = pd.read_excel(input_val, sheet_name='Sheet1')  \n",
-    "    df = df.drop([0])\n",
+    "    browseFiles()\n",
+    "    \n",
+    "    input_val = inputtxt.cget(\"text\")\n",
+    "    \n",
+    "    df = pd.read_excel(input_val, sheet_name='Sheet1')  #input_val\n",
+    "    df = df.drop([0]) \n",
+    "   \n",
+    "    A_val = float(textBox.get(1.0, \"end-1c\"))\n",
+    "    \n",
     "\n",
     "    #plot data\n",
     "    _graph()\n",
     "    \n",
+    "textBox=tkinter.Text(root, height=2, width=2)\n",
+    "textBox.grid(row = 0, column = 1)\n",
+    "A_val = 1\n",
+    "    \n",
     "button = tkinter.Button(master=root, text=\"Parse Data\", command=_graph)\n",
-    "button.grid(row = 0, column = 1)\n",
+    "button.grid(row = 0, column = 2)\n",
     "\n",
     "'''\n",
     "def _quit():\n",
